# git-warp

./: .gitignore  LICENSE.md  README.md  SPEC.md  git-warp.bat  make_release.py  make_test_repo.py  manual_test.md  publish_release.py  pyproject.toml  unit_tests.md
.github/workflows/: linux-tests.yml
git_history/: __init__.py  backend.py  editor.py  rest_api.py
git_history/static/: app.js  index.html  manual.html  style.css
git_warp/: __init__.py  __main__.py  backend.py  editor.py  rest_api.py
git_warp/static/: app.js  index.html  manual.html  style.css
tests/: conftest.py  test_challenging.py  test_cli.py  test_rest_api.py  test_submodule.py  test_ui.py  test_worktree.py
