[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-warp"
version = "0.1.1"
description = "Edit git commit history with full undo"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
# Requires git >= 2.26 (for --empty=keep support in git rebase)
dependencies = ["flask>=3.0"]

[project.urls]
Homepage = "http://helgesen.software"
Repository = "https://github.com/HelgesenSoftware/git-warp"

[project.scripts]
git-warp = "git_warp:main"

[tool.setuptools]
packages = ["git_warp"]

[tool.setuptools.package-data]
git_warp = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
markers = [
    "release: tests for edge cases, error conditions, and features that don't need to run on every commit",
    "submodule: tests for submodule functionality"
]
addopts = "-m \"not release and not submodule\" -n auto --dist=loadscope"

[tool.pylint.messages_control]
disable = ["missing-docstring"]
