[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-warp"
version = "0.1.4"
description = "Edit git commit history with full undo"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Requires git >= 2.26 (for --empty=keep support in git rebase)
# flask is capped at <2.3 because Flask 2.3+ dropped Python 3.7 support
dependencies = ["flask>=2.2,<2.3"]

[project.urls]
Homepage = "http://helgesen.software"
Repository = "https://github.com/HelgesenSoftware/git-warp"

[project.scripts]
git-warp = "git_warp:main"

[tool.setuptools]
packages = ["git_warp"]

[tool.setuptools.package-data]
git_warp = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
markers = [
    "release: tests for edge cases, error conditions, and features that don't need to run on every commit",
    "submodule: tests for submodule functionality"
]
addopts = "-m \"not release and not submodule\" -n auto --dist=loadscope"

[tool.pylint.messages_control]
disable = ["missing-docstring"]
